Housekeeping: Use org.testcontainer.*Container (#2945)
* Use AzuriteContainer from testcontainers-azure module

Replace GenericContainer with AzuriteContainer and add testcontainers-azure dependency. Update container initialization to use AzuriteContainer API with command modifier for skipApiVersionCheck flag.

* Migrate embedded-keycloak to use dasniko/testcontainers-keycloak library

Replace custom KeycloakContainer and KeycloakContainerFactory implementations with dasniko/testcontainers-keycloak dependency. Consolidate container configuration logic into EmbeddedKeycloakBootstrapConfiguration and refactor tests to use ApplicationContextRunner.

* Update to use Testcontainers native Kafka modules and remove embedded Zookeeper

Replace deprecated KafkaContainer imports with new testcontainers-kafka module classes. Use KafkaContainer for embedded-kafka and ConfluentKafkaContainer for embedded-native-kafka. Remove withEmbeddedZookeeper() call as newer Kafka versions use KRaft mode.

* Migrate embedded-minio to use MinIOContainer API and remove custom wait strategies

Replace custom MinioWaitStrategy with built-in Wait.forHttp() from testcontainers. Update container initialization to use MinIOContainer's withUserName/withPassword API instead of environment variables. Remove DefaultMinioWaitStrategy and MinioWaitStrategy classes. Add wiremock-testcontainers-module version property.

* Use VaultContainer's withInitCommand for secret initialization and remove redundant port exposure

Replace withSecretInVault API with withInitCommand using kv put command. Remove withExposedPorts call as port exposure is handled by VaultContainer. Remove unused Arrays import.

* Migrate embedded-google-pubsub to use PubSubEmulatorContainer from testcontainers-gcloud module

Replace GenericContainer with PubSubEmulatorContainer and add testcontainers-gcloud dependency. Update container initialization to use PubSubEmulatorContainer API with getEmulatorEndpoint(). Change default port from 808